--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@nestjs/core": "^10.0.0",
     "@nestjs/event-emitter": "^2.1.1",
     "@nestjs/platform-express": "^10.0.0",
+    "joi": "^17.13.3",
     "qrcode": "^1.5.4",
     "qrcode-terminal": "^0.12.0",
     "reflect-metadata": "^0.2.0",
@@ -38,6 +39,7 @@
     "@nestjs/testing": "^10.0.0",
     "@types/express": "^5.0.0",
     "@types/jest": "^29.5.2",
+    "@types/joi": "^17.2.2",
     "@types/node": "^20.3.1",
     "@types/qrcode-terminal": "^0.12.2",
     "@types/supertest": "^6.0.0",
